--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ langchain==0.0.300
 langchain-huggingface==0.0.3
 langchain-pinecone==0.0.3
 pinecone==5.0.1
-sentence-transformers==2.2.2
+sentence-transformers>=2.6.0
 requests==2.31.0
 pillow==9.5.0
 python-dotenv==1.0.0
