--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+
 streamlit==1.24.0
 langchain==0.0.300
 langchain-huggingface==0.0.3
 langchain-pinecone==0.0.3
 pinecone==5.0.1
-sentence-transformers>=2.6.0
+sentence-transformers>=2.6.0,<3.0.0
 requests==2.31.0
 pillow==9.5.0
 python-dotenv==1.0.0
