--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 # Core dependencies
-streamlit==1.31.1
-langchain==0.1.4
-langchain-community==0.0.16
-langchain-core==0.1.15
-langchain-huggingface==0.0.7
-langchain-pinecone==0.0.3
+streamlit
+langchain
+langchain-community
+langchain-core
+langchain-huggingface
+langchain-pinecone
 
 # Vector database
-pinecone-client==2.2.4
+pinecone-client
 
 # ML & embeddings
-sentence-transformers==2.2.2
-transformers==4.35.2
-torch==2.1.0
-accelerate==0.23.0
+sentence-transformers
+transformers
+torch
+accelerate
 
 # Image handling
-pillow==10.1.0
-requests==2.31.0
+pillow
+requests
 
 # Environment & utility
-python-dotenv==1.0.0
-watchdog==3.0.0
-pydantic==2.5.2
+python-dotenv
+watchdog
+pydantic
 
 # Web runtime
-nest-asyncio==1.5.8
+nest-asyncio
